# ZKP-Paillier-SP24

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  Doxyfile  Makefile  README.md  cryptopp-ios.sh  examples.md  mocha-config.json  package-lock.json  package.json  run_djinni.sh
android_project/AndroidCryptoLibrary/: settings.gradle
android_project/AndroidCryptoLibrary/cryptoplus/: CMakeLists.txt  build.gradle
android_project/AndroidCryptoLibrary/cryptoplus/src/main/: AndroidManifest.xml
android_project/AndroidCryptoLibrary/cryptoplus/src/main/res/values/: strings.xml
android_project/AndroidCryptoLibrary/cryptopp/: Android.mk  build.sh
android_project/MyApplication/: settings.gradle
android_project/MyApplication/app/: build.gradle
android_project/MyApplication/cryptoplus/: cryptoplus-debug.aar
android_project/MyApplication/libs/: vedacrypto-release.aar
android_project/MyApplication/veda/: build.gradle  vedacrypto-debug.aar
android_project/MyApplication/vedacrypto/: build.gradle  vedacrypto-release.aar
android_project/cryptopp/: Application.mk
docker-images/cpp-java/: Dockerfile
docker-images/wasm-runner/: Dockerfile
java_project/JavaCryptoLibrary/: .classpath  .project  build.gradle  settings.gradle
src/: ec.djinni  index.djinni  math.djinni  utils.djinni
src/cpp/: Makefile  ios.sh
src/cpp/app/: App.cpp  App.hpp  CBase.cpp  CBase.hpp  CBatchEnc.cpp  CBatchEnc.hpp  CEnc.cpp  CEnc.hpp  CircuitZKPProver.cpp  CircuitZKPProver.hpp  CircuitZKPVerifier.cpp  CircuitZKPVerifier.hpp  ConvertUtils.cpp  ConvertUtils.hpp  EndToEnd.cpp  EndToEnd.hpp  MathUtils.hpp  PaillierEncryption.cpp  PaillierEncryption.hpp  PolynomialCommitment.cpp  PolynomialCommitment.hpp  namespace.hpp
src/cpp/app/math/: MathUtils.cpp  MathUtils.hpp  Matrix.cpp  Matrix.hpp
src/cpp/app/utils/: ConvertUtils.hpp  Timer.cpp  Timer.hpp
src/cpp/lib/: namespace.hpp
src/cpp/lib/algo/: MerkleTree.cpp  MerkleTree.hpp  PedersenCommitment.cpp  PedersenCommitment.hpp
src/cpp/lib/basic/: AESEncryption.cpp  (+2 more)
src/jni/: .gitignore  CMakeLists.txt  CMakeSettings.json
src/wasm/: WCryptoUtils.hpp  WEC.hpp  WECPoint.hpp  WHashUtils.hpp  WInteger.hpp  WKeyPair.hpp  WRandomUtils.hpp  WUtils.hpp
test/cpp/: .gitignore  App_test.cpp  CBase_test.cpp  CBatchEnc_test.cpp  CEnc_test.cpp  CircuitZKP_test.cpp  EcPoint_test.cpp  Integer_speed_test.cpp  Integer_test.cpp  Makefile  Ntl_test.cpp  PolynomialCommitment_test.cpp  commitment_test.cpp  ecSignature_test.cpp  ec_test.cpp  ecencryption_test.cpp  ecutil_test.cpp  gen_point_test.cpp  hash_test.cpp  keypair_test.cpp  math_test.cpp  matrix_test.cpp  merkle_test.cpp  paillier_test.cpp  polynomial_test.cpp  random_test.cpp  unit_test1.cpp  util_test.cpp
test/js/: ec.test.js  integer.test.js  keypair.test.js  utils.test.js
xcode_project/CryptoPlus.xcworkspace/: contents.xcworkspacedata
xcode_project/IntergrationDemo/IntergrationDemo/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.mm  main.m
xcode_project/IntergrationDemo/IntergrationDemo.xcodeproj/: project.pbxproj
xcode_project/IntergrationDemo/cpp-bridge/: CPCryptoUtils+Private.h  CPCryptoUtils+Private.mm  CPCryptoUtils.h  CPECCurve+Private.h  CPECCurve+Private.mm  CPECCurve.h  CPECPoint+Private.h  CPECPoint+Private.mm  CPECPoint.h  CPHashUtils+Private.h  CPHashUtils+Private.mm  CPHashUtils.h  CPInteger+Private.h  CPInteger+Private.mm  CPInteger.h  CPKeyPair+Private.h  CPKeyPair+Private.mm  CPKeyPair.h  CPRandomUtils+Private.h  CPRandomUtils+Private.mm  CPRandomUtils.h  CPUtils+Private.h  CPUtils+Private.mm  CPUtils.h
(+61 files in other folders)
